# aixen

./: .env.example  .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: examples.yml  lint.yml  release.yml
examples/: expressions.py  greeting_card.py
src/aixen/: __init__.py  context.py
src/aixen/apis/: __init__.py  chat.py  chat_pricing.json  image.py  voice.py
src/aixen/apis/chat/: __init__.py  generate.py  pricing.json  template.py
